# ofxstatement-cd-tmb

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/ofxstatement/plugins/: ofxCustom.py  tmbcd.py
src/ofxstatement_cd_tmb/: cd_tmb.py  old_plugin.py
src/ofxstatement_cd_tmb/examples/: .~lock.231231.csv#  .~lock.sample.csv#  231231.csv  sample.csv
