[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-tmb-cd"
version = "3.0.0"
authors = [
  { name="Business Solutions For Africa", email="info@biz-4-africa.com" },
]
description = "Trust Merchant Bank (CD) plugin for ofxstatement"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement"]
dependencies = [
  "ofxstatement",
]

[project.urls]
Homepage = "https://github.com/BIZ4Africa/ofxstatement-cd-tmb"

[project.entry-points."ofxstatement"]
tmbcd = "tmbcd:TmbCdPlugin"
